package main;

public interface View {
    static void showMenu() {
        System.out.println("Show Menu");
    }
}
